# src/main/java/org/openapitools/api/GetConsentStatusApi.java
@@ -1,0 +1,98 @@
+/*
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.2.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package org.openapitools.api;
+
+import org.openapitools.model.ConsentStatusRequestBody;
+import org.openapitools.model.ConsentStatusResponse;
+import org.openapitools.model.ErrorResponse;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import javax.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-02-11T10:31:43.977402910Z[Etc/UTC]", comments = "Generator version: 7.2.0")
+@Validated
+@Tag(name = "Consent", description = "APIs for consent flow extensions")
+public interface GetConsentStatusApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    String PATH_GET_CONSENT_STATUS_POST = "/get-consent-status";
+    /**
+     * POST /get-consent-status : Retrieve consent status with HATEOAS status information
+     *
+     * @param consentStatusRequestBody  (required)
+     * @return OK - Consent status retrieved successfully with HATEOAS links (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "getConsentStatusPost",
+        summary = "Retrieve consent status with HATEOAS status information",
+        tags = { "Consent" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "OK - Consent status retrieved successfully with HATEOAS links", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ConsentStatusResponse.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))
+            })
+        },
+        security = {
+            @SecurityRequirement(name = "OAuth2"),
+            @SecurityRequirement(name = "BasicAuth")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = GetConsentStatusApi.PATH_GET_CONSENT_STATUS_POST,
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    default ResponseEntity<ConsentStatusResponse> getConsentStatusPost(
+        @Parameter(name = "ConsentStatusRequestBody", description = "", required = true) @Valid @RequestBody ConsentStatusRequestBody consentStatusRequestBody
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"data\" : { \"consentStatus\" : \"authorised\", \"consentId\" : \"7890-asdf-4567\", \"_links\" : { \"self\" : { \"href\" : \"/consents/7890-asdf-4567/status\" }, \"consent\" : { \"href\" : \"/consents/7890-asdf-4567\" } } }, \"responseId\" : \"Ec1wMjmiG8\", \"status\" : \"SUCCESS\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
